# Design-Study-SNSPD

./: README.md  REFERENCES.md  pyproject.toml  requirements.py  requirements.txt  simulation.py  snsdpd_test.eph
.cache/matplotlib/: fontlist-v390.json
config/: example_sweep.yaml
data/materials/: Au.csv  NbN.csv  NbTiN.csv  Si.csv  SiN.csv  SiO2.csv  TiO2.csv
fbqc_snspe/: __init__.py  absorptance.py  geometry.py  materials.py  mesh.py  objectives.py  plots.py  report.py  sweep.py  tolerance.py
fbqc_snspe/eme_backend/: __init__.py  base.py  empy_eme.py
fbqc_snspe/modes_backend/: __init__.py  analytic_solver.py  base.py  empy_native.py  empy_solver.py  factory.py  mpb_solver.py
outputs/: sweep.csv
scripts/: make_report.py  plot_cross_section.py  run_sweep.py
tests/: __init__.py  test_absorptance.py  test_materials.py  test_mode_factory.py  test_mode_factory_native.py  test_modes_empy.py
